# graft-ng

./: .gitignore  .gitmodules  CMakeConfig.h.in  CMakeLists.txt  LICENSE.txt  Makefile  README.md
data/: config.ini  supernode_fake_tier4_1.address.txt  supernode_fake_tier4_1.keys  supernode_tier1_1.address.txt  supernode_tier1_1.keys  supernode_tier1_2.address.txt  supernode_tier1_2.keys  supernode_tier1_3.address.txt  supernode_tier1_3.keys  supernode_tier1_4.address.txt  supernode_tier1_4.keys  supernode_tier2_1.address.txt  supernode_tier2_1.keys  supernode_tier2_2.address.txt  supernode_tier2_2.keys  supernode_tier2_3.address.txt  supernode_tier2_3.keys  supernode_tier2_4.address.txt  supernode_tier2_4.keys  supernode_tier3_1.address.txt  supernode_tier3_1.keys  supernode_tier3_2.address.txt  supernode_tier3_2.keys  supernode_tier3_3.address.txt  supernode_tier3_3.keys  supernode_tier3_4.address.txt  supernode_tier3_4.keys  supernode_tier4_1.address.txt  supernode_tier4_1.keys  supernode_tier4_2.address.txt  supernode_tier4_2.keys  supernode_tier4_3.address.txt  supernode_tier4_3.keys  supernode_tier4_4.address.txt  supernode_tier4_4.keys  test_supernode1.keys  test_supernode2.keys  test_wallet.address.txt  test_wallet.keys
data/rta-devnet-0719/: graft.conf  start_node_rta.sh
graftlets/: CMakeLists.txt  TestGraftlet.cpp  TestGraftlet1.cpp  WalletAddress.cpp  WalletAddress.h
graftlets/rta/: CMakeLists.txt  RTA.cpp
graftlets/rta/requests/: approvepaymentrequest.cpp  approvepaymentrequest.h  auth_sample_disqualificator.cpp  auth_sample_disqualificator.h  authorizertatx.cpp  authorizertatx.h  blockchain_based_list.cpp  blockchain_based_list.h  common.cpp  common.h  getpaymentdata.cpp  getpaymentdata.h  getpaymentstatus.cpp  getpaymentstatus.h  getsupernodeinfo.cpp  getsupernodeinfo.h  gettx.cpp  gettx.h  pay.cpp  pay.h  paymentdatarequest.cpp  paymentdatarequest.h  paymentdataresponse.cpp  paymentdataresponse.h  posrejectpaymentrequest.cpp  posrejectpaymentrequest.h  presale.cpp  presale.h  sale.cpp  sale.h  send_raw_tx.cpp  send_raw_tx.h  storepaymentdata.cpp  storepaymentdata.h  updatepaymentstatus.cpp  updatepaymentstatus.h
graftlets/wallet_address/: CMakeLists.txt  TestGraftlet1.cpp  WalletAddress.cpp  WalletAddress.h
include/: GraftletLoader.h  GraftletRegistry.h  IGraftlet.h  config_opts.h  connection.h  context.h  def_io_struct.h  expiring_list.h  graft_constants.h  graft_macros.h  graft_manager.h  graft_utility.hpp  handler_api.h  inout.h  json.hpp  jsonrpc.h  log.h  mongoosex.h  requestdefines.h  requests.h  router.h  self_holder.h  server.h  serveropts.h  state_machine.h  supernode.h  sys_info.h  sys_info_request.h  system_info.h  task.h  thread_pool.h  timer.h  wallet_manager.h  wallet_server.h
include/common/: utils.h
include/lib/graft/: ConfigIni.h  GraftletLoader.h  GraftletRegistry.h  IGraftlet.h  backtrace.h  binary_serialize.h  blacklist.h  connection.h  context.h  cryptmsg.h  expiring_list.h  graft_constants.h  graft_exception.h  graftlets_sys_info.h  handler_api.h  inout.h  jsonrpc.h  mongoosex.h  requests.h  requesttools.h  router.h  routing.h  serialize.h  serveropts.h  state_machine.h  sys_info.h  sys_info_request.h  task.h  thread_pool.h  upstream_manager.h
include/radix_tree/: radix_tree.hpp  radix_tree_it.hpp  radix_tree_node.hpp
include/reflective-rapidjson/: errorhandling.h  reflector.h
include/requests/: authorizertatxrequest.h  broadcast.h  cryptonodecallbackrequest.h  forwardrequest.h  getinforequest.h  healthcheckrequest.h  multicast.h  payrequest.h  paystatusrequest.h  rejectpayrequest.h  rejectsalerequest.h  requestdefines.h  saledetailsrequest.h  salerequest.h  salestatusrequest.h  sendrawtxrequest.h  sendsupernodeannouncerequest.h  sendtransferrequest.h  sendtxauthresponserequest.h  systeminforequest.h  unicast.h  walletbalancerequest.h  walletcreateaccountrequest.h  walletpreparetransferrequest.h  walletrestoreaccountrequest.h
include/rta/: DaemonRpcClient.h  fullsupernodelist.h  supernode.h
include/supernode/: config.h  config_loader.h  node.h  requestdefines.h  requests.h  server.h  supernode.h
include/supernode/requests/: pay.h  (+26 more)
include/thread_pool/: mpmc_bounded_queue.hpp  strand.hpp  thread_pool.hpp  thread_pool_options.hpp  worker.hpp
include/utils/: utils.h
include/walletnode/: requests.h  server.h  wallet_manager.h
src/: GraftletLoader.cpp  backtrace.c  backtrace.cpp  connection.cpp  context.cpp  graft_manager.cpp  graft_server.cpp  gzip.cpp  inout.cpp  log.cpp  main.cpp  mongoosex.cpp  requestdefines.cpp  requests.cpp  requesttools.cpp  router.cpp  routers_coap.cpp  routers_http.cpp  server.cpp  supernode.cpp  sys_info.cpp  sys_info_request.cpp  system_info.cpp  task.cpp  version.h.in  wallet_manager.cpp  wallet_server.cpp  wallet_server_main.cpp  zstd.cpp
src/apps/: test_runner.py
src/common/: utils.cpp
src/requests/: authorizertatxrequest.cpp  cryptonodecallbackrequest.cpp  debug.cpp  forwardrequest.cpp  getinforequest.cpp  healthcheckrequest.cpp  payrequest.cpp  paystatusrequest.cpp  rejectpayrequest.cpp  rejectsalerequest.cpp  saledetailsrequest.cpp  salerequest.cpp  salestatusrequest.cpp  sendrawtxrequest.cpp  sendsupernodeannouncerequest.cpp  sendtransferrequest.cpp  sendtxauthresponserequest.cpp  system_info.cpp  system_info.h  systeminforequest.cpp  txtosignrequest.cpp  walletrequests.cpp
src/rta/: DaemonRpcClient.cpp  fullsupernodelist.cpp  supernode.cpp
src/supernode/: config.cpp  config_loader.cpp  main.cpp  node.cpp  requestdefines.cpp  requests.cpp  server.cpp  supernode.cpp
src/utils/: utils.cpp
src/walletnode/: main.cpp  server.cpp  wallet_manager.cpp
test/: blacklist_test.cpp  coap_test.cpp  configini_test.cpp  cryptmsg_test.cpp  cryptonode_handlers_test.cpp  disqualification_test.cpp  expiring_set_test.cpp  fixture.h  graft_server_test.cpp  graftlets_test.cpp  json-rpc-test.cpp  json_rpc_test.cpp  json_test.cpp  main.cpp  rta_classes_test.cpp  serialize_test.cpp  strand_test.cpp  sys_info.cpp  test.h  thread_pool_test.cpp  upstream_test.cpp
test/request/: system_info.cpp
(+75 files in other folders)
